Add limited support for opensearch dashboards
Add the minimum OpenSearch-compatible surface needed for
OpenSearch Dashboards log search flows, introduce a small gateway that
lets Dashboards send user search traffic to Astra while keeping
Dashboards' own system indices and saved objects on a real OpenSearch
node

What this adds:
- OpenSearch-compatible search endpoints in Astra for /_search and
/{index}/_search, alongside the existing _msearch path
- compatibility responses for /, /_nodes, and /_cluster/state/nodes so
Dashboards can complete its startup handshake
- _mapping, _field_caps, and /{index}/_alias support backed by Astra
schema via a new OpenSearchSchemaAdapter
- a contrib/dashboards-gateway module that routes:
- user search/schema/index APIs to Astra
- Dashboards system-index/admin traffic to OpenSearch
- synthetic compatibility responses where needed
- local Compose wiring for OpenSearch, OpenSearch Dashboards, and the
Dashboards gateway
- browser-driven smoke tooling for Dashboards:
- helper scripts to start the stack, ingest a UI smoke fixture, and
drive index-pattern creation plus Discover/dashboard validation
- shared Selenium helpers and a testing guide for the local flow

This also tightens Astra's OpenSearch request handling:
- split single-search parsing from _msearch parsing
- default missing queries to match_all
- accept both aggs and aggregations
- parse date ranges from OpenSearch date math, ISO timestamps, and
epoch-millis strings
- rewrite bare query_string "*" to match_all as a compatibility
workaround
- only derive Astra's internal time window when there is exactly one
date range in the request because only the last time window was being
considered
- expand coverage for schema adaptation, request parsing, gateway
forwarding, and the multi-search fixtures Dashboards depends on

Index scoping is now enforced on the Lucene query path:
- LogIndexSearcherImpl passes the requested dataset into
OpenSearchAdapter
- OpenSearchAdapter scopes index s